[project]
name = "realzen-agent"
version = "0.1.0"
description = "A smart real estate investing agent"
authors = [
    {name = "Christine Chen",email = "cchen.mdphd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.3.5,<0.4.0)",
    "langgraph-cli (>=0.1.75,<0.2.0)",
    "langchain-deepseek (>=0.1.2,<0.2.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "langchain-anthropic (>=0.3.9,<0.4.0)",
    "jsonschema-rs (>=0.29.1,<0.30.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.20,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [
    {include = "realzen_agent"}
]
